--- a/index.html
+++ b/index.html
@@ -1,97 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reward Ads App</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <style>
-        body { font-family: sans-serif; background: #111; color: white; text-align: center; padding: 20px; }
-        .btn { background: #0088cc; border: none; padding: 15px 25px; color: white; border-radius: 10px; cursor: pointer; font-size: 18px; }
-        .stats { margin-top: 20px; background: #222; padding: 15px; border-radius: 10px; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <title>Auto Reward Every 15s - Premium Monetag TMA</title>
+  
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  
+  <style>
+    :root {
+      --tg-bg: #0d1117;
+      --tg-text: #c9d1d9;
+      --tg-accent: #58a6ff;
+      --tg-success: #238636;
+      --tg-card: #161b22;
+      --tg-border: #30363d;
+    }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #0d1117, #0a0e14);
+      color: var(--tg-text);
+      min-height: 100vh;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+    }
+    header {
+      background: rgba(13,17,23,0.9);
+      backdrop-filter: blur(10px);
+      padding: 16px;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      border-bottom: 1px solid var(--tg-border);
+    }
+    h1 { font-size: 1.9rem; color: white; margin: 0 0 8px; }
+    .balance { font-size: 1.5rem; font-weight: bold; color: #ffd700; }
+    .container { flex: 1; padding: 20px 16px; max-width: 420px; margin: 0 auto; width: 100%; }
+    .card {
+      background: var(--tg-card);
+      border: 1px solid var(--tg-border);
+      border-radius: 16px;
+      padding: 24px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+    }
+    .btn {
+      background: linear-gradient(135deg, var(--tg-success), #2ea043);
+      color: white;
+      border: none;
+      padding: 16px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      border-radius: 12px;
+      width: 100%;
+      margin: 12px 0;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    .btn:hover { transform: scale(1.04); }
+    .btn:disabled { background: #444; cursor: not-allowed; }
+    #status {
+      text-align: center;
+      margin: 20px 0;
+      padding: 12px;
+      border-radius: 10px;
+      font-size: 1.1rem;
+      background: rgba(88,166,255,0.15);
+    }
+    .success { background: rgba(35,134,54,0.2); color: #7fff7f; }
+    .warning { background: rgba(255,165,0,0.2); color: #ffcc00; }
+    .countdown { font-size: 1.3rem; font-weight: bold; color: #ff9500; margin: 10px 0; }
+    .loader {
+      border: 5px solid #333;
+      border-top: 5px solid var(--tg-accent);
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: 20px auto;
+      display: none;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
+  </style>
 </head>
 <body>
 
-    <h2>Welcome to Reward App</h2>
-    <div class="stats">
-        <p>Your Country: <span id="country">Loading...</span></p>
-        <p>Total Impressions: <span id="imp_count">0</span></p>
+  <header>
+    <h1>Auto Reward Mode</h1>
+    <div class="balance">Coins: <span id="coins">0</span></div>
+  </header>
+
+  <div class="container">
+    <div class="card">
+      <h2>Auto Ads Every 15 Seconds</h2>
+      <p>Watch rewarded ads automatically — earn coins non-stop! (High CPM format)</p>
+      
+      <div id="status">Starting auto mode in few seconds...</div>
+      <div class="countdown" id="countdown">Next ad in: 15s</div>
+      <div class="loader" id="loader"></div>
+
+      <button class="btn" id="toggleAuto">Pause Auto Ads</button>
+      <button class="btn" style="background:#444;" onclick="Telegram.WebApp.close()">Exit</button>
     </div>
-    <br>
-    <button class="btn" onclick="showRewardAd()">Watch Ad to Earn</button>
+  </div>
 
-    <script>
-        // Supabase Configuration (Change with your own keys)
-        const SUPABASE_URL = 'YOUR_SUPABASE_URL';
-        const SUPABASE_KEY = 'YOUR_SUPABASE_ANON_KEY';
-        const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+  <script>
+    // === আপনার Monetag Rewarded Tag ID ===
+    const REWARDED_ID = "10197154"; // ← real ID দিন (show_10197154)
+    const AD_INTERVAL = 15000; // 15 seconds
+    const MIN_COOLDOWN = 5000; // 5s extra cooldown after ad
 
-        let user = window.Telegram.WebApp.initDataUnsafe.user;
-        let zoneId = "10197154"; // Default
+    window.Telegram.WebApp.ready();
+    window.Telegram.WebApp.expand();
 
-        // ১. জোন আইডি এবং ইউজার ডাটা লোড করা
-        async function initApp() {
-            // Fetch Zone ID from Admin
-            const { data: settings } = await supabase.from('settings').select('zone_id').single();
-            if (settings) {
-                zoneId = settings.zone_id;
-                loadAdScript(zoneId);
-            }
+    let coins = parseInt(localStorage.getItem("coins") || "0");
+    document.getElementById("coins").textContent = coins;
 
-            // Get Country
-            fetch('https://ipapi.co/json/').then(res => res.json()).then(data => {
-                document.getElementById('country').innerText = data.country_name;
-                updateUserRecord(data.country_name);
-            });
+    let autoEnabled = true;
+    let isAdShowing = false;
+    let timer = null;
+    let countdownInterval = null;
 
-            loadUserStats();
-        }
+    const status = document.getElementById("status");
+    const countdownEl = document.getElementById("countdown");
+    const loader = document.getElementById("loader");
+    const toggleBtn = document.getElementById("toggleAuto");
 
-        // ২. অ্যাড স্ক্রিপ্ট ইনজেক্ট করা
-        function loadAdScript(id) {
-            const script = document.createElement('script');
-            script.src = `https://pizoflow.com/act/show_${id}.js`; // Example provider link
-            document.head.appendChild(script);
-        }
+    function updateCoins(amount) {
+      coins += amount;
+      document.getElementById("coins").textContent = coins;
+      localStorage.setItem("coins", coins);
+    }
 
-        // ৩. ইউজার ডাটাবেস আপডেট
-        async function updateUserRecord(country) {
-            if (!user) return;
-            const { data } = await supabase.from('user_stats').upsert({
-                telegram_id: user.id,
-                username: user.username || user.first_name,
-                country: country,
-                last_active: new Date()
-            });
-        }
+    function startCountdown() {
+      let timeLeft = AD_INTERVAL / 1000;
+      countdownEl.textContent = `Next ad in: ${timeLeft}s`;
+      countdownInterval = setInterval(() => {
+        timeLeft--;
+        countdownEl.textContent = `Next ad in: ${timeLeft}s`;
+        if (timeLeft <= 0) clearInterval(countdownInterval);
+      }, 1000);
+    }
 
-        async function loadUserStats() {
-            if (!user) return;
-            const { data } = await supabase.from('user_stats').select('*').eq('telegram_id', user.id).single();
-            if (data) document.getElementById('imp_count').innerText = data.impressions;
-        }
+    function showRewardedAd() {
+      if (!autoEnabled || isAdShowing) return;
+      isAdShowing = true;
+      loader.style.display = "block";
+      status.textContent = "Showing rewarded ad...";
+      status.className = "";
 
-        // ৪. অ্যাড দেখানো এবং রিওয়ার্ড দেওয়া
-        function showRewardAd() {
-            if (typeof window[`show_${zoneId}`] === 'function') {
-                window[`show_${zoneId}`]().then(async () => {
-                    alert('Reward Granted!');
-                    // ইমপ্রেশন আপডেট
-                    const { data } = await supabase.rpc('increment_impression', { row_id: user.id }); 
-                    // বি:দ্র: Supabase এ একটি Function লিখে নিতে হবে increment এর জন্য
-                    // অথবা নিচের মত সাধারণ আপডেট:
-                    const { data: current } = await supabase.from('user_stats').select('impressions').eq('telegram_id', user.id).single();
-                    await supabase.from('user_stats').update({ impressions: current.impressions + 1 }).eq('telegram_id', user.id);
-                    loadUserStats();
-                });
-            } else {
-                alert("Ad not ready or Invalid Zone ID");
-            }
-        }
+      const adFunc = window[`show_${REWARDED_ID}`];
+      if (typeof adFunc === "function") {
+        adFunc()
+          .then(() => {
+            updateCoins(150); // Adjust reward amount
+            status.textContent = "Ad watched! +150 coins ✓";
+            status.className = "success";
+          })
+          .catch(err => {
+            status.textContent = "Ad skipped/failed — retrying soon";
+            status.className = "warning";
+            console.log("Ad error:", err);
+          })
+          .finally(() => {
+            loader.style.display = "none";
+            isAdShowing = false;
+            setTimeout(startAutoTimer, MIN_COOLDOWN);
+          });
+      } else {
+        status.textContent = "Ad function not ready — check SDK";
+        status.className = "warning";
+        isAdShowing = false;
+        setTimeout(startAutoTimer, 5000);
+      }
+    }
 
-        initApp();
-    </script>
+    function startAutoTimer() {
+      if (!autoEnabled) return;
+      clearTimeout(timer);
+      clearInterval(countdownInterval);
+      startCountdown();
+      timer = setTimeout(showRewardedAd, AD_INTERVAL);
+    }
+
+    toggleBtn.onclick = () => {
+      autoEnabled = !autoEnabled;
+      toggleBtn.textContent = autoEnabled ? "Pause Auto Ads" : "Resume Auto Ads";
+      status.textContent = autoEnabled ? "Auto mode resumed" : "Auto mode paused";
+      status.className = autoEnabled ? "success" : "";
+      if (autoEnabled) startAutoTimer();
+      else clearTimeout(timer);
+    };
+
+    // Start on load
+    setTimeout(() => {
+      if (typeof window[`show_${REWARDED_ID}`] === "function") {
+        status.textContent = "Auto rewarded ads active (every 15s)";
+        startAutoTimer();
+      } else {
+        status.textContent = "Waiting for Monetag SDK...";
+      }
+    }, 3000);
+  </script>
 </body>
 </html>
